Renamed Site Root

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
+file.reference.Web3-Transaction-Form-docs=docs
 file.reference.Web3Test-public_html=public_html
 file.reference.Web3Test-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.Web3Test-public_html}
-test.folder=${file.reference.Web3Test-test}
+site.root.folder=${file.reference.Web3-Transaction-Form-docs}
