Code Cleanup and Reorg

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
+file.reference.Web3-Transaction-Form-app=app
 file.reference.Web3-Transaction-Form-docs=docs
 file.reference.Web3Test-public_html=public_html
 file.reference.Web3Test-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.Web3-Transaction-Form-docs}
+site.root.folder=${file.reference.Web3-Transaction-Form-app}
